# rag-search

./: .gitignore  README.md
.github/workflows/: release.yml
src/: index.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai/: gemini.rs  llm_provider.rs  memory.rs  mod.rs  model_registry.rs  structured.rs
src-tauri/src/commands/: chat.rs  context_guard.rs  folder.rs  index.rs  mod.rs  settings.rs
src-tauri/src/commands/search/: context.rs  decompose.rs  keyword.rs  mod.rs  pipeline.rs  prompt.rs  smart_query.rs
src-tauri/src/db/: mod.rs  sqlite.rs
src-tauri/src/embedding/: gemini_embed.rs  mod.rs  pipeline.rs
src-tauri/src/indexer/: chunker.rs  mod.rs  tantivy_index.rs
src-tauri/src/license/: mod.rs
src-tauri/src/parser/: mod.rs
src-tauri/src/search/: hybrid.rs  mod.rs  vector_index.rs
src-tauri/src/watcher/: handler.rs  mod.rs
src/js/: api.js  app.js  chat.js  chunk-viewer.js  folder.js  search.js  settings.js
src/styles/: chat.css  chunk-viewer.css  main.css  settings.css  sidebar.css
